--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        .denk_one {
+            font-family:'Lustria', serif;
+        }
+    </style>
     <!--google anylitics code-->
     <script>
         (function(i, s, o, g, r, a, m) {
@@ -21,6 +26,8 @@
     </script>
     <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=690, initial-scale=1">
+    <!--font external style sheet-->
+    <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
     <title>ACE12</title>
 </head>
 
@@ -53,6 +60,7 @@
                     </tr>
                     <tr>
                         <td>
+                            <!--facebook button-->
                             <div id="fb-root"></div>
                             <script>
                                 (function(d, s, id) {
@@ -107,41 +115,41 @@
         </tr>
     </table>
     <span style=" display: block;margin-left: auto;margin-right: auto;">
-        <table class="half_screen table_boarder table_spaceing" border="1" bgcolor="#221e11" style="left: 25%;margin:auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
             <tr>
                 <td>
                     <font color="#ffffff">Whats new</font>
                 </td>
             </tr>
-            <td>
+            <td style="background: linear-gradient(#221e11 ,#000)">
                 <font color="#ffffff" size="6"><div align="center">Videos</div></font>
-                <br>
-            </td>
-        </table>
-    <table border="1" class="table_spaceing table_boarder" style="left:85%; right:20px; width: 10.4%;" bgcolor=#221e11>
+                <br><span class="text_show denk_one"></span>
+    </td>
+    </table>
+    <table border="1" class="table_spaceing table_boarder_v2" style="left:85%; right:20px; width: 13%;" bgcolor=#221e11>
         <tr>
-            <td>
+            <td bgcolor=#000>
                 <font color="#ffffff"><center>Popular</center></font>
             </td>
         </tr>
         <tr>
-            <td>
+            <td>stuff goes here
                 <div class="scrollable">
                     <span class="text_show">
                    
                      </span>
-    </div>
-    </td>
-    </tr>
+                </div>
+            </td>
+        </tr>
     </table>
-    <table class="table_spaceing text_center table_boarder table_spaceing" border="1" style="position:absolute;
-    left:40px;" bgcolor="#221e11">
+    <table class="table_spaceing text_center table_boarder_v2 table_spaceing" border="1" style="position:absolute;
+    left:40px;width:13%;" bgcolor="#221e11">
         <tr>
-            <td>
+            <td bgcolor=#000>
                 <font color="#ffffff">comments</font>
             </td>
         </tr>
-        <td>
+        <td style="background: linear-gradient(#221e11 ,#000)">
             <font color="#ffffff">Disqus goes here... maybe</font>
         </td>
     </table>
@@ -153,12 +161,12 @@
 <p class="text_show">You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
 <footer>
-    <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);">
+    <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
         <tr>
-            <td class="align_left" style="padding:0px;vertical-align:bottom;height:300px;padding-bottom:20px;">
+            <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
             </td>
-            <td class="align_right" style="padding:0px;vertical-align:bottom;height:300px;padding-bottom:20px;">
+            <td class="align_right" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <a href="terms_and_conditions.html">disclaimers</a>
             </td>
         </tr>
