--- a/gallery.html
+++ b/gallery.html
@@ -20,22 +20,22 @@
     </script>
     <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>gallerys - ACE12</title>
+    <title>info - ACE12</title>
 </head>
 
-<body class="no_margin">
-    <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
+<body class="no_margin" style="margin-bottom: 50px;">
+
+
+    <table border="1" bgcolor="#040015" class="widescreen table_boarder">
         <tr>
             <td width="75%" bgcolor="#fff">
-                <center>
-                    <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
-                </center>
+                <img src="assets/ace12.jpg" style=" display: block;margin-left: auto;margin-right: auto;" alt="Click Links" height="150" width="325">
             </td>
-
             <td>
-                <table class="widescreen" border="1" cellpadding="10">
+                <table class="widescreen no_margin" border="0" style="background: linear-gradient(#01b5ea ,#000851);" cellpadding="10" height="159px" width="332px">
                     <tr>
                         <td>
+                            <!-- twitter button -->
                             <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
                             <script>
                                 ! function(d, s, id) {
@@ -51,7 +51,24 @@
                         </td>
                     </tr>
                     <tr>
-                        <td bgcolor="#222111">
+                        <td>
+                            <!--facebook button-->
+                            <div id="fb-root"></div>
+                            <script>
+                                (function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if(d.getElementById(id)) return;
+                                    js = d.createElement(s);
+                                    js.id = id;
+                                    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                                    fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));
+                            </script>
+                            <div class="fb-like" data-href="https://www.facebook.com/pages/Ace-12/307443606070772" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <!-- +1 button-->
                             <div class="g-plusone text_show" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
                             <script type="text/javascript">
@@ -64,48 +81,57 @@
                                     s.parentNode.insertBefore(po, s);
                                 })();
                             </script>
-                            <br>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <!--FACEBOOK BUTTON GOES HERE-->
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
     </table>
-    <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
+    <table border="1" bgcolor="#001340" style="background: linear-gradient(#06266f, #001340);" class="widescreen table_boarder">
         <tr>
             <td width="20%" style="text-align:center;">
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </td>
             <td width="20%" style="text-align:center;">
-                <a href="bio.html">bios</a>
+                <a href="news.html">News</a>
             </td>
             <td width="20%" style="text-align:center;">
-                <a href="bio.html">bios</a>
+                <a href="gallery.html">Gallery</a>
             </td>
             <td width="20%" style="text-align:center;">
-                <a href="bio.html">bios</a>
+                <a href="info.html">Info</a>
             </td>
             <td width="20%" style="text-align:center;">
-                <a href="bio.html">bios</a>
+                <a href="bio.html">Bios</a>
             </td>
         </tr>
     </table>
+    <span style=" display: block;margin-left: auto;margin-right: auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+            <tr>
+                <td>
+                    <font color="#ffffff">Gallery</font>
+                </td>
+            </tr>
+            <td style="background: linear-gradient(#221e11 ,#000)">
+                <font color="#ffffff" size="6"><div align="center">eventuly, i'll find a good gallery to go here.</div></font>
+                <br><span class="text_show denk_one"></span>
+    </td>
+    </table>
+    </span>
 </body>
-<table class="bottom widescreen" bgcolor="#06266f">
-    <tr>
-        <td class="align_left" style="padding:0px;">
-            <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
-        </td>
-        <td class="align_right" style="padding:0px;">
-            <a href="terms_and_conditions.html">disclaimer</a>
-        </td>
-    </tr>
-</table>
+<footer>
+    <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
+        <tr>
+            <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
+                <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+            </td>
+            <td class="align_right" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
+                <a href="terms_and_conditions.html">disclaimers</a>
+            </td>
+        </tr>
+    </table>
+</footer>
 <!--[if lt msie]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
