--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <table border="1" bgcolor="#001340" style="background: linear-gradient(#06266f, #001340);" class="widescreen table_boarder">
         <tr>
             <td width="20%" style="text-align:center;">
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </td>
             <td width="20%" style="text-align:center;">
                 <a href="news.html">News</a>
@@ -133,12 +133,12 @@
             </td>
         </tr>
         <tr>
-            <td>stuff goes here
+            <td style="background: linear-gradient(#221e11 ,#000)"><center>
                 <div class="scrollable">
                     <span class="text_show">
-                   
+                   whats popular on ace 12
                      </span>
-                </div>
+                </div></center>
             </td>
         </tr>
     </table>
