--- a/info.html
+++ b/info.html
@@ -110,7 +110,7 @@
         <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
             <tr>
                 <td>
-                    <font color="#ffffff">Newsfeed</font>
+                    <font color="#ffffff">Information</font>
                 </td>
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
