--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+
     <style>
         .table_boarder_v2 {
             border-style:solid;
@@ -28,6 +29,10 @@
             background-image: url("assets/background.jpg");
             background-size:80px 80px;
         }
+        .text_show {
+            color:#fff;
+            text-indent:50px;
+        }
     </style>
     <title>404 - ACE12</title>
 </head>
@@ -38,7 +43,7 @@
             <div class="inner">
                 <center>
 
-                    <table border="1" class="table_boarder_v2 text_show" style="background: linear-gradient(#221e11 ,#000)">
+                    <table border="1" class="table_boarder_v2 text_show" bgcolor="#000">
                         <tr>
                             <td>
                                 <h1>
@@ -56,6 +61,15 @@
                     </h5>
                             </td>
                         </tr>
+
+                        <tr>
+                            <td>
+                                <!--[if lt msie]>
+                                you could also be useing IE.
+                                <p class="text_show">You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p><p>or <a href="http://www.mozilla.org/en-US/firefox/new/">mozilia firefox</a></p><![endif]-->
+                            </td>
+                        </tr>
+
                     </table>
                 </center>
             </div>
