--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<!--[if lt msie]>
+<script type="text/javascript">
+    window.location = "404.html";
+</script>
+<![endif]-->
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -133,12 +138,14 @@
             </td>
         </tr>
         <tr>
-            <td style="background: linear-gradient(#221e11 ,#000)"><center>
-                <div class="scrollable">
-                    <span class="text_show">
+            <td style="background: linear-gradient(#221e11 ,#000)">
+                <center>
+                    <div class="scrollable">
+                        <span class="text_show">
                    whats popular on ace 12
                      </span>
-                </div></center>
+                    </div>
+                </center>
             </td>
         </tr>
     </table>
@@ -156,10 +163,6 @@
     </span>
 
 </body>
-
-<!--[if lt msie]>
-<p class="text_show">You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
-<![endif]-->
 <footer>
     <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
         <tr>
