--- a/jordan.html
+++ b/jordan.html
@@ -3,6 +3,11 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        .denk_one {
+            font-family:'Lustria', serif;
+        }
+    </style>
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -18,19 +23,126 @@
         ga('create', 'UA-47032953-1', 'mralext20.github.io');
         ga('send', 'pageview');
     </script>
+    <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Jordan Ralston - ACE12</title>
 </head>
 
-<body><a href="index.html">go home</a>
-    <center>
-        <h2>Jordan Ralston</h2>
-        <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-        </LI>
-    </center>
+<body class="no_margin" style="margin-bottom: 50px;">
+    <table border="1" bgcolor="#040015" class="widescreen table_boarder">
+        <tr>
+            <td width="75%" bgcolor="#fff">
+                <img src="assets/ace12.jpg" style=" display: block;margin-left: auto;margin-right: auto;" alt="Click Links" height="150" width="325">
+            </td>
+            <td>
+                <table class="widescreen no_margin" border="0" style="background: linear-gradient(#01b5ea ,#000851);" cellpadding="10" height="159px" width="332px">
+                    <tr>
+                        <td>
+                            <!-- twitter button -->
+                            <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
+                            <script>
+                                ! function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if(!d.getElementById(id)) {
+                                        js = d.createElement(s);
+                                        js.id = id;
+                                        js.src = "//platform.twitter.com/widgets.js";
+                                        fjs.parentNode.insertBefore(js, fjs);
+                                    }
+                                }(document, "script", "twitter-wjs");
+                            </script>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!--facebook button-->
+                            <div id="fb-root"></div>
+                            <script>
+                                (function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if(d.getElementById(id)) return;
+                                    js = d.createElement(s);
+                                    js.id = id;
+                                    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                                    fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));
+                            </script>
+                            <div class="fb-like" data-href="https://www.facebook.com/pages/Ace-12/307443606070772" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- +1 button-->
+                            <div class="g-plusone text_show" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
+                            <script type="text/javascript">
+                                (function() {
+                                    var po = document.createElement('script');
+                                    po.type = 'text/javascript';
+                                    po.async = true;
+                                    po.src = 'https://apis.google.com/js/platform.js';
+                                    var s = document.getElementsByTagName('script')[0];
+                                    s.parentNode.insertBefore(po, s);
+                                })();
+                            </script>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+    <table border="1" bgcolor="#001340" style="background: linear-gradient(#06266f, #001340);" class="widescreen table_boarder">
+        <tr>
+            <td width="20%" style="text-align:center;">
+                <a href="/">Home</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="news.html">News</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="gallery.html">Gallery</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="info.html">Info</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="bio.html">Bios</a>
+            </td>
+        </tr>
+    </table>
+    <span style=" display: block;margin-left: auto;margin-right: auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+            <tr>
+                <td>
+                    <font color="#ffffff">About Me</font>
+                </td>
+            </tr>
+            <tr>
+                <td style="background: linear-gradient(#221e11 ,#000)">
+                    <font color="#ffffff" size="6"><div align="center">
+                        <h2>Jordan Ralston</h2>
+                        </div>
+                    </font>
+                    <br>
+                    <span class="text_show denk_one">
+                        <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
+                        </li>
+                    </span>
+    </td>
+    </tr>
+    </table>
+    </span>
+    <footer>
+        <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
+            <tr>
+                <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
+                    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+                </td>
+                <td class="align_right" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
+                    <a href="terms_and_conditions.html">disclaimers</a>
+                </td>
+            </tr>
+        </table>
+    </footer>
 </body>
-<footer>
-    <A HREF="mailto:possiblyinfinite4@gmail.com">Click Here To email Me</A>
-</footer>
 
 </html>
