more banner additions.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                             </script>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <a href="socal.html">socal buttons and badges are here</a>
+                        </td>
+                    </tr>
                 </table>
             </td>
         </tr>
@@ -142,7 +147,7 @@
                 <center>
                     <div class="scrollable">
                         <span class="text_show">
-                   whats popular on ace 12
+                   whats popular on ACE12
                      </span>
                     </div>
                 </center>
