--- a/alex.html
+++ b/alex.html
@@ -86,6 +86,11 @@
                             </script>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <a href="socal.html">socal buttons and badges are here</a>
+                        </td>
+                    </tr>
                 </table>
             </td>
         </tr>
@@ -125,8 +130,7 @@
                     <br>
                     <span class="text_show denk_one">
                         <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-        <li><a href="https://plus.google.com/u/0/+AlexanderTerry">alexander is also on google+</a>
-        </li>
+                        </li>
                     </span>
     </td>
     </tr>
@@ -135,7 +139,7 @@
     <table border="1" class="table_spaceing table_boarder_v2" style="left:83%; right:20px; width: 13%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
-                <font color="#ffffff"><center>Popular</center></font>
+                <font color="#ffffff"><center>social</center></font>
             </td>
         </tr>
         <tr>
@@ -146,12 +150,13 @@
                   <div class="g-person" data-width="164" data-href="//plus.google.com/u/0/115283922267056735848" data-theme="dark" data-showtagline="false" data-rel="author"></div>
                             <!--google plus badge code-->
                             <script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+                                (function() {
+                                    var po = document.createElement('script');
+                                    po.type = 'text/javascript'; po.async = true;
+                                    po.src = 'https://apis.google.com/js/platform.js';
+                                    var s = document.getElementsByTagName('script')[0];
+                                    s.parentNode.insertBefore(po, s);  })();
+                            </script>
                      </span>
                     </div>
                 </center>
@@ -171,5 +176,4 @@
         </table>
     </footer>
 </body>
-
 </html>
