--- a/socal.html
+++ b/socal.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<!--[if lt msie]>
+<script type="text/javascript">
+    window.location = "404.html";
+</script>
+<![endif]-->
+
+
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -8,6 +15,7 @@
             font-family:'Lustria', serif;
         }
     </style>
+    <!--google anylitics code-->
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -23,12 +31,16 @@
         ga('create', 'UA-47032953-1', 'mralext20.github.io');
         ga('send', 'pageview');
     </script>
+    <!--resize everything to fit most screensizes-->
+    <meta name=viewport content="width=690, initial-scale=1">
+    <!--font external style sheet-->
     <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>Jordan Ralston - ACE12</title>
+    <title>ACE12</title>
 </head>
 
 <body class="no_margin" style="margin-bottom: 50px;">
+
+
     <table border="1" bgcolor="#040015" class="widescreen table_boarder">
         <tr>
             <td width="75%" bgcolor="#fff">
@@ -91,11 +103,9 @@
                             <a href="socal.html">socal buttons and badges are here</a>
                         </td>
                     </tr>
-
                 </table>
             </td>
         </tr>
-
     </table>
     <table border="1" bgcolor="#001340" style="background: linear-gradient(#06266f, #001340);" class="widescreen table_boarder">
         <tr>
@@ -120,51 +130,17 @@
         <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
             <tr>
                 <td>
-                    <font color="#ffffff">About Me</font>
+                    <font color="#ffffff">socal buttons</font>
                 </td>
             </tr>
-            <tr>
-                <td style="background: linear-gradient(#221e11 ,#000)">
-                    <font color="#ffffff" size="6"><div align="center">
-                        <h2>Jordan Ralston</h2>
-                        </div>
-                    </font>
-                    <br>
-                    <span class="text_show denk_one">
-                        <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-                        </li>
-                    </span>
+            <td style="background: linear-gradient(#221e11 ,#000)">
+                <br><span class="text_show denk_one"><div class="g-page" data-href="//plus.google.com/u/0/107747753008946199043" data-theme="dark" data-rel="publisher"></div>
+                <br>
+                
+                </span>
     </td>
-    </tr>
     </table>
     </span>
-    <table border="1" class="table_spaceing table_boarder_v2" style="left:83%; right:20px; width: 13%;" bgcolor=#221e11>
-        <tr>
-            <td bgcolor=#000>
-                <font color="#ffffff"><center>social</center></font>
-            </td>
-        </tr>
-        <tr>
-            <td style="background: linear-gradient(#221e11 ,#000)">
-                <center>
-                    <div class="scrollable">
-                        <span class="text_show">
-                  <div class="g-person" data-width="164" data-href="//plus.google.com/109706337043264245491" data-theme="dark" data-showtagline="false" data-rel="author"></div>
-                            <!--google plus badge code-->
-                            <script type="text/javascript">
-                                (function() {
-                                    var po = document.createElement('script');
-                                    po.type = 'text/javascript'; po.async = true;
-                                    po.src = 'https://apis.google.com/js/platform.js';
-                                    var s = document.getElementsByTagName('script')[0];
-                                    s.parentNode.insertBefore(po, s);  })();
-                            </script>
-                     </span>
-                    </div>
-                </center>
-            </td>
-        </tr>
-    </table>
     <footer>
         <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
             <tr>
