--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!--[if lt msie]>
-<script type="text/javascript">
-    window.location = "404.html";
-</script>
-<![endif]-->
+
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -173,6 +169,12 @@
         <tr>
             <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+            </td>
+            <td>
+                <!--[if lt msie]>
+ie is old. i dont like it, and you schould try google chrome.
+<![endif]-->
+
             </td>
             <td class="align_right" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <a href="terms_and_conditions.html">disclaimers</a>
