--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
@@ -166,17 +165,19 @@
             <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
             </td>
-            <td>
-                <!--[if lt msie]>
-ie is old. i dont like it, and you schould try google chrome.
-<![endif]-->
-
-            </td>
             <td class="align_right" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <a href="terms_and_conditions.html">disclaimers</a>
             </td>
         </tr>
     </table>
 </footer>
-
+<!--[if lt IE 10]>
+<script>if(confirm("IE9 is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
+window.location = "https://www.google.com/intl/en/chrome/browser/";
+}
+else {
+    window.location = "http://www.mozilla.org/en-US/firefox/new/";
+}    
+</script>
+<![endif]-->
 </html>
