now to use the new image.

--- a/socal.html
+++ b/socal.html
@@ -44,7 +44,7 @@
     <table border="1" bgcolor="#040015" class="widescreen table_boarder">
         <tr>
             <td width="75%" bgcolor="#fff">
-                <img src="assets/ace12.jpg" style=" display: block;margin-left: auto;margin-right: auto;" alt="Click Links" height="150" width="325">
+                <img src="assets/ace12.gif" style=" display: block;margin-left: auto;margin-right: auto;" alt="Click Links" height="150" width="325">
             </td>
             <td>
                 <table class="widescreen no_margin" border="0" style="background: linear-gradient(#01b5ea ,#000851);" cellpadding="10" height="159px" width="332px">
