--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
             <tr>
                 <td>
-                    <font color="#ffffff">Whats new</font>
+                    <font color="#ffffff">What's new</font>
                 </td>
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
