make things load faster

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=690, initial-scale=1">
     <!--font external style sheet-->
-    <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
     <title>ACE12</title>
 </head>
 
@@ -36,7 +36,7 @@
 
     <table border="1" bgcolor="#040015" class="widescreen table_boarder">
         <tr>
-            <td width="75%" bgcolor="#fff">
+            <td width="75%" style="background:#fff;">
                 <img src="assets/ace12.gif" style=" display: block;margin-left: auto;margin-right: auto;" alt="Click Links" height="150" width="325">
             </td>
             <td>
@@ -172,12 +172,12 @@
     </table>
 </footer>
 <!--[if lt IE 10]>
-<script>if(confirm("IE9 is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
-window.location = "https://www.google.com/intl/en/chrome/browser/";
-}
-else {
-    window.location = "http://www.mozilla.org/en-US/firefox/new/";
-}    
-</script>
-<![endif]-->
+    <script>
+        if(confirm("IE9 or less is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
+            window.location = "https://www.google.com/intl/en/chrome/browser/";
+        } else {
+            window.location = "http://www.mozilla.org/en-US/firefox/new/";
+        }
+    </script>
+    <![endif]-->
 </html>
