--- a/jordan.html
+++ b/jordan.html
@@ -123,11 +123,12 @@
                     <font color="#ffffff" size="6"><div align="center">
                         <h2>Jordan Ralston</h2>
                         </div>
-                    </font>
-                    <br>
+                    </font><font color="#ffffff">
+                    Jordan is the one who created Ace 12 with help from Alexander Terry. His original idea was to just create a youtube chanel in hopes of geting popular but latter realized that it takes alot more than a youtube channel to become popular on the internet. 
+                   </font>
+                        <br>
                     <span class="text_show denk_one">
-                        <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-                        </li>
+                      
                     </span>
     </td>
     </tr>
