--- a/news.html
+++ b/news.html
@@ -20,7 +20,7 @@
     </script>
     <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>info - ACE12</title>
+    <title>News - ACE12</title>
 </head>
 
 <body class="no_margin" style="margin-bottom: 50px;">
