--- a/river.html
+++ b/river.html
@@ -102,14 +102,14 @@
             </tr>
             <tr>
                 <td style="background: linear-gradient(#221e11 ,#000)">
-                    <font color="#ffffff" size="6"><div align="center">
-                        <h2>River Parpana</h2>
-                        </div>
+                    <font color="#ffffff" size="6">
+                        <h2 style=" margin-bottom: 0px">River Parpana</h2>
                     </font>
-                    <br>
-                    <span class="text_show denk_one"><li>our main source of artwork </li>
-                        <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-                        </li>
+                    <span class="text_show denk_one"><center>River is an aspiring artist who has helped to produce the art work that we use. River has also assisted in creating video content, and will continu to do so in the foreseeable future.</center>
+                        <br>
+                        <ul>
+                        <li></li>
+                            </ul>
                     </span>
     </td>
     </tr>
