prepare for the comments

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
             overflow:hidden
         }
         body {
-            background-image: url("assets/background.jpg");
+            background-image: url("assets/backgroundsmall.jpg");
             background-size:80px 80px;
         }
         .text_show {
