--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
                 <font color="#ffffff" size="6"><div align="center">Videos</div></font>
-                <br><span class="text_show denk_one"></span>
+                <br><span class="text_show denk_one"><!--content filler--></span>
     </td>
     </table>
     <table border="1" class="table_spaceing table_boarder_v2" style="left:85%; right:20px; width: 13%;" bgcolor=#221e11>
@@ -145,22 +145,50 @@
             </td>
         </tr>
     </table>
-    <table class="table_spaceing text_center table_boarder_v2 table_spaceing" border="1" style="position:absolute;
-    left:40px;width:13%;" bgcolor="#221e11">
+    <!--<table class="table_spaceing text_center table_boarder_v2" border="1" style="position:absolute;
+    left:40px;width:20%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
-                <font color="#ffffff">comments</font>
+                <font color="#ffffff">Comments</font>
             </td>
         </tr>
         <td style="background: linear-gradient(#221e11 ,#000)">
-            <font color="#ffffff">Disqus goes here... maybe</font>
+            <div id="disqus_thread"> <font color="#ffffff">Ace12</font></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                 (function() {
+                    var dsq = document.createElement('script');
+                    dsq.type = 'text/javascript';
+                    dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+            </noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
         </td>
-    </table>
+    </table>-->
     </span>
+
+    <!--<script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+         (function() {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>-->
 
 </body>
 <footer>
-    <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
+    <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;border-color:#221e11 #221e11;">
         <tr>
             <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
                 <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
@@ -180,4 +208,5 @@
         }
     </script>
     <![endif]-->
+
 </html>
