--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         </tr>
     </table>
     <span style=" display: block;margin-left: auto;margin-right: auto;">
-        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#221e11" style="left: 25%;margin:auto;">
             <tr>
-                <td>
+                <td bgcolor="#000000">
                     <font color="#ffffff">What's new</font>
                 </td>
             </tr>
@@ -127,10 +127,10 @@
                 <br><span class="text_show denk_one"><!--content filler--></span>
     </td>
     </table>
-    <table border="1" class="table_spaceing table_boarder_v2" style="left:85%; right:20px; width: 13%;" bgcolor=#221e11>
+    <table border="1" class="table_spaceing table_boarder_v2" style="left:83%; right:20px; width:13%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
-                <font color="#ffffff"><center>Popular</center></font>
+                <font color="#ffffff"><center>social</center></font>
             </td>
         </tr>
         <tr>
@@ -138,14 +138,23 @@
                 <center>
                     <div class="scrollable">
                         <span class="text_show">
-                   whats popular on ACE12
+                  <div class="g-person" data-width="164" data-href="//plus.google.com/107747753008946199043" data-theme="dark" data-showtagline="false" data-rel="author"></div>
+                            <!--google plus badge code-->
+                            <script type="text/javascript">
+                                (function() {
+                                    var po = document.createElement('script');
+                                    po.type = 'text/javascript'; po.async = true;
+                                    po.src = 'https://apis.google.com/js/platform.js';
+                                    var s = document.getElementsByTagName('script')[0];
+                                    s.parentNode.insertBefore(po, s);  })();
+                            </script>
                      </span>
                     </div>
                 </center>
             </td>
         </tr>
     </table>
-    <!--<table class="table_spaceing text_center table_boarder_v2" border="1" style="position:absolute;
+    <table class="table_spaceing text_center table_boarder_v2" border="1" style="position:absolute;
     left:40px;width:20%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
@@ -170,10 +179,10 @@
             </noscript>
             <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
         </td>
-    </table>-->
+    </table>
     </span>
 
-    <!--<script type="text/javascript">
+    <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
         /* * * DON'T EDIT BELOW THIS LINE * * */
@@ -184,7 +193,7 @@
             s.src = '//' + disqus_shortname + '.disqus.com/count.js';
             (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
         }());
-    </script>-->
+    </script>
 
 </body>
 <footer>
@@ -201,7 +210,7 @@
 </footer>
 <!--[if lt IE 10]>
     <script>
-        if(confirm("IE9 or less is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
+        if(confirm("IE9 or less is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.\nthis is a zero choice option.")) {
             window.location = "https://www.google.com/intl/en/chrome/browser/";
         } else {
             window.location = "http://www.mozilla.org/en-US/firefox/new/";
