--- a/jordan.html
+++ b/jordan.html
@@ -112,9 +112,9 @@
         </tr>
     </table>
     <span style=" display: block;margin-left: auto;margin-right: auto;">
-        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#221e11" style="left: 25%;margin:auto;">
             <tr>
-                <td>
+                <td bgcolor="#000000">
                     <font color="#ffffff">About Me</font>
                 </td>
             </tr>
