--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -89,11 +89,6 @@
                             </script>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
-                            <a href="socal.html">socal buttons and badges are here</a>
-                        </td>
-                    </tr>
                 </table>
             </td>
         </tr>
@@ -118,15 +113,15 @@
         </tr>
     </table>
     <span style=" display: block;margin-left: auto;margin-right: auto;">
-        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#221e11" style="left: 25%;margin:auto;">
             <tr>
-                <td>
-                    <font color="#ffffff" size="10pt">terms and conditions</font>
+                <td bgcolor="#000000">
+                    <font color="#ffffff" size="10pt">Disclaimers</font>
                 </td>
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
                 <font color="#ffffff" size="6"><div align="center"></div></font>
-                <br><span class="text_show denk_one">This site is currently a personal project and as such we currently share no association or afilliations to any other brand or companyddany mentions of these is purrly personal opinons and ideas about such.
+                <br><span class="text_show denk_one">This site is currently a personal project and as such we currently share no association or afilliations to any other brand or company we may mention, any mentions of these are purrly personal opinons and ideas about them. 
                 </span>
     </td>
     </table>
