--- a/info.html
+++ b/info.html
@@ -107,18 +107,59 @@
         </tr>
     </table>
     <span style=" display: block;margin-left: auto;margin-right: auto;">
-        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#221e11" style="left: 25%;margin:auto;">
             <tr>
-                <td>
+                <td bgcolor="#000000">
                     <font color="#ffffff">Information</font>
                 </td>
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
-                <font color="#ffffff" size="6"><div align="center">Filler</div></font>
+                <font color="#ffffff" size="6"><div align="center">poiuytrewqlkjhgfdsamnbvcxz</div></font>
                 <br><span class="text_show denk_one"></span>
     </td>
     </table>
     </span>
+    
+       <table class="table_spaceing text_center table_boarder_v2" border="1" style="position:absolute;
+    left:40px;width:20%;" bgcolor=#221e11>
+        <tr>
+            <td bgcolor=#000>
+                <font color="#ffffff">Comments</font>
+            </td>
+        </tr>
+        <td style="background: linear-gradient(#221e11 ,#000)">
+            <div id="disqus_thread"> <font color="#ffffff">Ace12</font></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                 (function() {
+                    var dsq = document.createElement('script');
+                    dsq.type = 'text/javascript';
+                    dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+            </noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        </td>
+    </table>
+    
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+         (function() {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>
+
 </body>
 <footer>
     <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
