add badge to the froupt page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <br><span class="text_show denk_one"><!--content filler--></span>
     </td>
     </table>
-    <table border="1" class="table_spaceing table_boarder_v2" style="left:83%; right:20px; width:13%;" bgcolor=#221e11>
+    <table border="1" class="table_spaceing table_boarder_v2" style="left:83%; right:20px; width: 13%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
                 <font color="#ffffff"><center>social</center></font>
@@ -138,7 +138,7 @@
                 <center>
                     <div class="scrollable">
                         <span class="text_show">
-                  <div class="g-person" data-width="164" data-href="//plus.google.com/107747753008946199043" data-theme="dark" data-showtagline="false" data-rel="author"></div>
+                  <div class="g-page" data-width="164" data-href="//plus.google.com/u/0/107747753008946199043" data-theme="dark" data-showtagline="false" data-rel="author"></div>
                             <!--google plus badge code-->
                             <script type="text/javascript">
                                 (function() {
