final project due soon, lets get up to date!

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 </head>
 
 <body class="no_margin" style="margin-bottom: 50px;">
-
+    
+    </body>
 
     <table border="1" bgcolor="#040015" class="widescreen table_boarder">
         <tr>
