--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
                 <font color="#ffffff" size="6"><div align="center">Videos</div></font>
-                <br><span class="text_show denk_one"><!--content filler--></span>
+                <br><span class="text_show denk_one"><iframe width="560" height="315" src="//www.youtube.com/embed/ETKgLPtVcYc" frameborder="1" allowfullscreen></iframe></span><br>
     </td>
     </table>
-    <table border="1" class="table_spaceing table_boarder_v2" style="left:83%; right:20px; width: 13%;" bgcolor=#221e11>
+    <table border="1" class="table_spaceing table_boarder_v2" style="left:80%; right:20px; width: 13%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
                 <font color="#ffffff"><center>social</center></font>
@@ -155,7 +155,7 @@
             </td>
         </tr>
     </table>
-    <table class="table_spaceing text_center table_boarder_v2" border="1" style="position:absolute;
+   <table class="table_spaceing text_center table_boarder_v2" border="1" style="position:absolute;
     left:40px;width:20%;" bgcolor=#221e11>
         <tr>
             <td bgcolor=#000>
