--- a/info.html
+++ b/info.html
@@ -114,8 +114,9 @@
                 </td>
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
-                <font color="#ffffff" size="6"><div align="center">poiuytrewqlkjhgfdsamnbvcxz</div></font>
-                <br><span class="text_show denk_one"></span>
+                <font color="#ffffff" size="6"><div align="center">Ace12 information</div></font>
+                <br><span class="text_show denk_one">Ace12 is a network of internet based social media who creates machinima, live action shorts, voice overs, and animations.<br>
+                If you have any questions about who we are or what we do feel free to visit our <a href="q_and_a.html">Q & A page</a>.</span>
     </td>
     </table>
     </span>
