--- a/news.html
+++ b/news.html
@@ -114,7 +114,11 @@
                 </td>
             </tr>
             <td style="background: linear-gradient(#221e11 ,#000)">
-                <font color="#ffffff" size="6"><div align="center">Filler</div></font>
+                <font color="#ffffff" size="6"><div align="center">Twitter
+                    <br><a class="twitter-timeline" href="https://twitter.com/ace12usa" data-widget-id="467140510126067712">Tweets by @ace12usa</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<br>
+                    </div></font>
                 <br><span class="text_show denk_one"></span>
     </td>
     </table>
